--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
   <html>
     <body>
-      <h1>Hello World</h1>
-      <p>I'm hosted with GitHub Pages.</p>
+      <h1>Welcome to my placeholder webpage.</h1>
+      <p><a href="JSGames/Dumbgeon.html">Host Dumbgeon (Parsec/discord/streaming service required)</a></p>
+      <p><a href="JSGames/Dumbgeon_drawer.html">Draw for Dumbgeon</a></p>
     </body>
 </html>
