--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <body>
       <h1>Welcome to my placeholder webpage.</h1>
-      <p><a href="JSGames/Dumbgeon.html">Host Dumbgeon (Parsec/discord/streaming service required)</a></p>
+      <p><a href="JSGames/Dumbgeon.html">Host Dumbgeon (Parsec/discord/streaming service recommended to play with others)</a></p>
       <p><a href="JSGames/Dumbgeon_drawer.html">Draw for Dumbgeon</a></p>
     </body>
 </html>
