--- a/JSGames/Dumbgeon.html
+++ b/JSGames/Dumbgeon.html
@@ -1344,7 +1344,7 @@ function animate() {
 				{
 					for (var i = 0; i < Rolls; i++)
 					{
-						RolledDice.push((Math.floor(MinRoll+Math.random()*(DiffRoll+1)))
+						RolledDice.push((Math.floor(MinRoll+Math.random()*(DiffRoll+1))))
 					}
 				}
 				else
