--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
-  <html>
-    <body>
-      <h1>Welcome to my placeholder webpage.</h1>
-      <p><a href="JSGames/Dumbgeon.html">Host Dumbgeon (Parsec/discord/streaming service recommended to play with others)</a></p>
-      <p><a href="JSGames/Dumbgeon_drawer.html">Draw for Dumbgeon</a></p>
-    </body>
+<link rel="stylesheet" href="style.css">
+<html>
+<body>
+<h1>Wobsite</h1>
+<h3>Welcome to my placeholder webpage for sharing original Javascript games</h3>
+<p>(again note this is a placeholder page its kinda bland rn)</p>
+<div class="flex-container">
+  <div class="elem">
+  	<h4>Play Dumbgeon</h4>
+  	<p><a href="JSGames/Dumbgeon.html">Host Dumbgeon (Parsec/discord/streaming service recommended to play with others)</a></p>
+	<p><a href="JSGames/Dumbgeon_drawer.html">Draw for Dumbgeon</a></p>
+  </div>
+  <div class="elem">To be filled with something</div>
+  <div class="elem">To be filled with something</div>
+</div> 
+</body>
 </html>
