Updated main page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
 <h1>Wobsite</h1>
 <h3>Welcome to my placeholder webpage for sharing original Javascript games</h3>
 <p>(again note this is a placeholder page its kinda bland rn)</p>
-<div class="flex-container">
-  <div class="elem">
-  	<h4>Play Dumbgeon</h4>
-  	<p><a href="JSGames/Dumbgeon.html">Host Dumbgeon (Parsec/discord/streaming service recommended to play with others)</a></p>
-	<p><a href="JSGames/Dumbgeon_drawer.html">Draw for Dumbgeon</a></p>
+<div id="flex-container">
+  <div id="elem"><span id="gametitle">Play Dumbgeon</span>
+  	<a id = "hoverlink" href="JSGames/Dumbgeon.html">Host Dumbgeon (Parsec, discord, or streaming service recommended to play with others)</a>
+	<a id = "hoverlink" href="JSGames/Dumbgeon_drawer.html">Draw for Dumbgeon</a>
   </div>
-  <div class="elem">To be filled with something</div>
-  <div class="elem">To be filled with something</div>
+  <div id="elem"><span id="gametitle">More games here</span></div>
 </div> 
 </body>
 </html>
