--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {
   	<a id = "hoverlink" href="JSGames/Dumbgeon.html">Host Dumbgeon (Parsec, discord, or streaming service recommended to play with others)</a>
 	<a id = "hoverlink" href="JSGames/Dumbgeon_drawer.html">Draw for Dumbgeon</a>
   </div>
-  <div id="elem"><span id="gametitle">More games here</span></div>
+  <div id="elem"><span id="gametitle">More games to be added here</span></div>
 </div> 
 </body>
 </html>
